--- a/book.html
+++ b/book.html
@@ -7,75 +7,9 @@
         href="https://icons-for-free.com/iconfiles/png/512/book+books+education+knowledge+learning+reading+icon-1320085877896372664.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&family=Yusei+Magic&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Content/Styles/MainPage.css">
+    <script src="/Content/Scripts/PageManager.js"></script>
 </head>
-<style>
-    * {
-        font-family: 'Varela Round', sans-serif;
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    body {
-        background-color: #fc5296;
-        background-image: linear-gradient(to right, #fc5296 0%, #f67062 74%);
-    }
-
-    h1 {
-        text-align: center;
-        margin-top: 35px;
-        height: 50px;
-        padding: 7px;
-        margin-bottom: 20px;
-        color: antiquewhite;
-    }
-
-    form {
-        background-color: rgb(255 250 250 / 59%);
-        width: 50%;
-        margin: auto;
-        margin-bottom: 30px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 30px;
-        border-radius: 20px;
-        margin-top: 50px;
-    }
-
-    input {
-        display: flex;
-        text-indent: 8px;
-        background-color: #fefcfb40;
-        border: none;
-        border-bottom: 2px solid;
-    }
-
-    .img-and-audio {
-        margin-left: 30%;
-
-    }
-
-    .big-input {
-        height: 40px;
-        width: 500px;
-    }
-
-    button {
-        height: 40px;
-        width: 200px;
-        margin-left: 30%;
-        margin-right: 30%;
-    }
-
-    label {
-        width: 200px;
-    }
-
-    .cover {
-        margin-left: -45%;
-    }
-</style>
 
 <body>
     <div class="header">
@@ -173,25 +107,7 @@
     <script>
         let submitButton = document.getElementById('submitButton');
 
-        submitButton.addEventListener('click', function () {
-            let form = document.forms[0],
-                formData = new FormData(form),
-                bookList = JSON.parse(localStorage['bookList'] || '[]'),
-                book = {},
-                bookListJson,
-                userName;
-
-            book.id = bookList.length+1;
-
-            for (let data of formData) {
-                book[data[0]] = data[1] || 'N/A';
-            }
-
-            bookList.push(book);
-            bookListJson = JSON.stringify(bookList);
-
-            localStorage['bookList'] = bookListJson;
-        });
+        addFormHandlingToButton(submitButton, 'bookList');
     </script>
 </body>
 
